# rust-firmware

./: .gitignore  Cargo.toml  Makefile  build.md  readme.md
.cargo/: config.toml
build-fsp/: .gitignore  Cargo.toml  readme.txt
build-fsp/src/: build_time_fsp_template.rs  lib.rs
build-fsp/tools/: build_qemu_fsp_release.rs
elf-loader/: Cargo.toml
elf-loader/src/: elf.rs  elf64.rs  lib.rs
fw-apic/: Cargo.toml
fw-apic/src/: apic.rs  lib.rs
fw-cmos/: Cargo.toml
fw-cmos/src/: cmos.rs  lib.rs
fw-exception/: Cargo.toml
fw-exception/src/: idt.rs  interrupt.rs  lib.rs
fw-exception/src/asm/: idt.s  mod.rs
fw-logger/: Cargo.toml
fw-logger/src/: lib.rs  logger.rs
fw-pci/: Cargo.toml
fw-pci/src/: lib.rs  pci.rs
fw-virtio/: Cargo.toml
fw-virtio/src/: consts.rs  dma.rs  lib.rs  mem.rs  virtio_pci.rs  virtqueue.rs
fw-vsock/: Cargo.toml
fw-vsock/src/: device.rs  lib.rs  protocol.rs  virtio_vsock_device.rs  vsock.rs
pe-loader/: Cargo.toml
pe-loader/src/: lib.rs  mem_region.rs  pe.rs
plain/src/: methods.rs
platform/rust-firmware-qemu/: Cargo.toml
platform/rust-firmware-qemu/src/: fsp_data.rs  lib.rs
r-efi/src/: base.rs
r-efi/src/protocols/: block_io.rs  device_path.rs  disk_io.rs  disk_io2.rs  driver_binding.rs  hii_database.rs  mod.rs
r-uefi-pi/: Cargo.toml
r-uefi-pi/src/: boot_mode.rs  enum_builder.rs  hob.rs  lib.rs  r_efi_wrapper.rs
r-uefi-pi/src/hob/: hob_type.rs  mod.rs  resource_attribute.rs  resource_type.rs  test.rs
rust-firmware-layout/: .gitignore  Cargo.toml  build.rs
rust-firmware-layout/etc/: config.json
rust-firmware-layout/src/: consts.rs  lib.rs
rust-firmware-platform/: Cargo.toml
rust-firmware-platform/src/: lib.rs
rust-firmware-platform/src/qemu/: fsp_data.rs  fsp_m_upd.rs  fsp_s_upd.rs  fsp_t_upd.rs  mod.rs
rust-firmware-tool/: .gitignore  Cargo.toml
rust-firmware-tool/src/: main.rs  mem.rs  pe.rs
rust-fsp/: Cargo.toml
rust-fsp-wrapper/: Cargo.toml
rust-fsp-wrapper/fsp_bins/: readme.txt
rust-fsp-wrapper/fsp_bins/Qemu/: QEMU_FSP_RELEASE_M_FFFC8000.raw  QEMU_FSP_RELEASE_S_FFFEA000.raw  QEMU_FSP_RELEASE_T_FFFC5000.raw
rust-fsp-wrapper/fsp_bins/Qemu/Rebase/: FspRel_M_FFFC8000.raw  FspRel_S_FFFEA000.raw  FspRel_T_FFFC5000.raw
rust-fsp-wrapper/src/: fsp.rs  fsp_info_header.rs  fsp_m_udp.rs  fsp_s_udp.rs  fsp_t_upd.rs  fsp_upd_header.rs  lib.rs  memslice.rs
rust-fsp-wrapper/src/asm/: mod.rs
rust-fsp/fsp_bins/Qemu/Rebase/: FspRel_S_FFFDD000.raw
rust-fsp/src/: fsp_info_header.rs  fsp_t_upd.rs  fsp_upd_header.rs  lib.rs
rust-ipl/: Cargo.toml  build.rs
rust-ipl-log/: Cargo.toml
rust-ipl-log/src/: lib.rs
rust-ipl/ResetVector/: .gitignore  FspWrapper.asm  Main.asm  PageTables.asm  PostCodes.inc  ResetVector.nasm
rust-ipl/ResetVector/Ia32/: Flat32ToFlat64.asm  Init32.asm  ReloadFlat32.asm  ResetVectorVtf0.asm
rust-ipl/src/: const_guids.rs  elf.rs  logger.rs  main.rs  memslice.rs  pcd.rs  pci.rs  sec.rs  utils.rs
rust-ipl/src/asm/: mod.rs  read_write_gdtr.s  read_write_idtr.s  switch_stack.s  thunk64to32.s
rust-ipl/src/pi/: boot_mode.rs  fv.rs  fv_lib.rs  hob.rs  hob_lib.rs  mod.rs
rust-paging/: Cargo.toml
rust-paging/src/: consts.rs  frame.rs  lib.rs  paging.rs
rust-uefi-payload/: .gitignore  Cargo.toml
rust-uefi-payload/r-efi/: .cargo_vcs_info.json  Cargo.toml
rust-uefi-payload/r-efi/src/: system.rs
rust-uefi-payload/r-efi/src/protocols/: file.rs
rust-uefi-payload/src/: block.rs  bzimage.rs  common.rs  fat.rs  loader.rs  logger.rs  main.rs  mem.rs  mmio.rs  part.rs  pci.rs  pe.rs  virtio.rs
rust-uefi-payload/src/efi/: alloc.rs  block.rs  conin.rs  conout.rs  device_path.rs  event.rs  file.rs  handle_database.rs  hii.rs  hii_font.rs  hii_string.rs  image.rs  init.rs  mod.rs  peloader.rs  variable.rs
rust-uefi-payload/src/pi/: fv.rs  fv_lib.rs  hob.rs  hob_lib.rs  mod.rs
rust-uefi-payload/src/r_efi_ext/: mod.rs
rust-vsock-payload/: Cargo.toml  about_vsock.md  build.rs  readme.md
rust-vsock-payload/src/: client.rs  heap.rs  iface.rs  main.rs  platform.rs  server.rs  virtio_impl.rs  vsock_impl.rs  vsock_lib.rs
rust-vsock-payload/vsock_c_lib/: main.c
uefi-pi/: Cargo.toml
uefi-pi/src/: const_guids.rs  fv_lib.rs  hob_lib.rs  lib.rs
uefi-pi/test_data/: fsp_hob_data.rs
