[workspace]

members = [
    "rust-ipl",
    "rust-uefi-payload",
    "rust-firmware-tool",
    ]

default-members = ["rust-ipl", "rust-uefi-payload"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
