[package]
name = "build-fsp"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "build_qemu_fsp_release"
path = "tools/build_qemu_fsp_release.rs"
test = false
bench = false

