[package]
name = "fw-exception"
version = "0.1.0"
authors = ["Kailun Qin <kailun.qin@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86 = "0.51.0"
x86_64 = "0.14.10"
log = "0.4.13"
bitflags = "1.2.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
