[package]
name = "fw-pci"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
x86 = "0.51.0"
log = { path = "../fw-logger", package="fw-logger"}
