[package]
name = "fw-virtio"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
bitflags = "1.2.1"
volatile = "0.2"

fw-pci = { path = "../fw-pci" }
