[package]
name = "fw-vsock"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
atomic_refcell = "0.1.7"
byteorder = { version = "1.0", default-features = false }
fw-virtio = { path = "../fw-virtio" }
