[package]
name = "pe-loader"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
scroll = { version = "0.10", default-features=false, features = ["derive"] }

[dev-dependencies]
simple_logger = "1.11.0"
