[package]
name = "rust-firmware-platform"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

[dependencies]
rust-fsp-wrapper = { path = "../rust-fsp-wrapper" }
scroll = { version = "0.10", default-features=false, features = ["derive"] }

[features]
default = []

qemu = []
qemu2 = []
