[package]
name = "rust-firmware-tool"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

[dependencies]
r-efi = "3.2.0"
r-uefi-pi =  { path = "../r-uefi-pi" }
simple_logger = "1.11.0"
scroll = { version = "0.10", default-features=false }
pe-loader = { path = "../pe-loader" }
rust-firmware-layout = { path = "../rust-firmware-layout" }
rust-fsp = { path= "../rust-fsp" }
rust-firmware-qemu = { path = "../platform/rust-firmware-qemu" }
