[package]
name = "rust_ipl"
version = "0.1.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>"
    ]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
r-efi = "3.2.0"
x86 = "0.34.0"
plain = "0.2.3"
bitfield = "0.13.2"
linked_list_allocator = "0.8.11"
fw-logger = { path = "../fw-logger" }
paging = { path = "../rust-paging" }
r-uefi-pi =  { path = "../r-uefi-pi" }
uefi-pi =  { path = "../uefi-pi" }
elf-loader = { path = "../elf-loader" }
pe-loader = { path = "../pe-loader" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
