[package]
name = "rust_ipl"
version = "0.1.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>"
    ]
edition = "2018"

[dependencies]
r-efi = "3.2.0"
x86 = "0.34.0"
plain = "0.2.3"
bitfield = "0.13.2"
linked_list_allocator = "0.8.11"
fw-logger = { path = "../fw-logger" }
paging = { path = "../rust-paging" }
r-uefi-pi =  { path = "../r-uefi-pi" }
uefi-pi =  { path = "../uefi-pi" }
elf-loader = { path = "../elf-loader" }
pe-loader = { path = "../pe-loader" }
rust-firmware-layout = { path = "../rust-firmware-layout" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
