[package]
name = "rust_ipl"
version = "0.1.0"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>"
    ]
edition = "2018"

[dependencies]
r-efi = "3.2.0"
x86 = "0.34.0"
plain = "0.2.3"
bitfield = "0.13.2"
linked_list_allocator = "0.8.11"
scroll = { version = "0.10", default-features=false, features = ["derive"] }
fw-exception = { path = "../fw-exception" }
log = { path = "../rust-ipl-log", package="rust-ipl-log" }
paging = { path = "../rust-paging" }
r-uefi-pi =  { path = "../r-uefi-pi" }
uefi-pi =  { path = "../uefi-pi" }
elf-loader = { path = "../elf-loader" }
pe-loader = { path = "../pe-loader" }
rust-firmware-layout = { path = "../rust-firmware-layout" }
rust-fsp-wrapper = { path = "../rust-fsp-wrapper" }


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
rust-firmware-layout = { path = "../rust-firmware-layout" }
