[package]
name = "rust-uefi-payload"
version = "0.0.1"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>"
    ]
edition = "2018"

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
cpuio = "*"
spin = "0.4.9"
r-efi = {path = "r-efi"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

