[package]
name = "rust-uefi-payload"
version = "0.0.1"
authors = [
    "Jiewen Yao <jiewen.yao@intel.com>",
    "Xiaoyu Lu <xiaoyux.lu@intel.com>"
    ]
edition = "2018"

[dependencies]
cpuio = "*"
fw-logger = { path = "../fw-logger" }
spin = "0.4.9"
r-efi = "3.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
