[package]
name = "uefi-pi"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.13"
r-efi = "3.2.0"
r-uefi-pi =  { path = "../r-uefi-pi" }
scroll = { version = "0.10", default-features=false}

[dev-dependencies]
env_logger = "0.8.4"
